<resources>
    <string name="app_name">Weitblick</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Profil</string>

    <string name="menu_tabs">Aktuelles</string>
    <string name="menu_project">Projekte</string>
    <string name="menu_location">Fahrrad fahren</string>
    <string name="menu_stats">Statistik</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_more">Mehr</string>
    <string name="logo_text">Bildungschancen weltweit!</string>


    <string name="title_activity_maps">Map</string>

    <string name="title_app">Weitblick</string>
    <string name="prompt_username">Nutzername</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Passwort bestätigen</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_up">Registrieren</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="password">Passwort:</string>
    <string name="donation">Gesammelte Spenden:</string>
    <string name="km">Erlangte km:</string>

</resources>
