<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_tabs"
        android:icon="@drawable/news_icon"
        android:title="@string/menu_tabs"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_project_tabs"
        android:icon="@drawable/projects_icon"
        android:title="@string/menu_project"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/cycle_icon"
        android:title="@string/menu_location"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_stats_tabs"
        android:icon="@drawable/stats_icon"
        android:title="@string/menu_stats"
        android:enabled="true"/>
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_dots"
        android:iconTint="@color/white"
        android:title="@string/menu_more"
        android:enabled="true"/>
</menu>