<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tabs"
            android:icon="@drawable/icon_news"
            android:title="@string/menu_tabs" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/icon_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/icon_project"
            android:title="@string/menu_project" />
            
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/icon_bike"
            android:title="Fahrrad fahren"
            android:onClick="startMapsActivity"/>

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/icon_stats"
            android:title="@string/menu_stats" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/icon_faq"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_imprint"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_imprint" />
        </menu>
    </item>

</menu>
