<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tabs">

    <fragment
        android:id="@+id/nav_tabs"
        android:name="com.example.weitblickapp_android.ui.tabs.TabsFragment"
        android:label="@string/menu_tabs"
        tools:layout="@layout/fragment_tabs" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.weitblickapp_android.ui.tabs.NewsFragment"
        android:label="@string/menu_tabs"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_project"
        android:name="com.example.weitblickapp_android.ui.project.ProjectFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.weitblickapp_android.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.weitblickapp_android.ui.tools.ToolsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.weitblickapp_android.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_blog"
        android:name="com.example.weitblickapp_android.ui.blog_entry.BlogEntryFragment"
        android:label="@string/menu_blog"
        tools:layout="@layout/fragment_blog" />
</navigation>