<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="372dp"
        android:layout_marginRight="372dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back"
        tools:ignore="VectorDrawableCompat" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageProfil"
        android:layout_width="238dp"
        android:layout_height="228dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="46dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="#000000"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/donationtext"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/open_sans"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/donation"
        app:layout_constraintEnd_toStartOf="@+id/changePassword"
        app:layout_constraintStart_toEndOf="@+id/passwordtext"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/km"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="169dp"
        android:fontFamily="@font/open_sans"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kmtext"
        app:layout_constraintTop_toBottomOf="@+id/donation" />

    <TextView
        android:id="@+id/donation"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/open_sans"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donationtext"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/donationtext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/donation"
        app:layout_constraintBottom_toTopOf="@+id/kmtext"
        app:layout_constraintEnd_toStartOf="@+id/donation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordtext" />

    <TextView
        android:id="@+id/kmtext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginBottom="169dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/km"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/km"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donationtext" />

    <TextView
        android:id="@+id/email"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfil" />

    <ImageButton
        android:id="@+id/changeProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/ic_change_profil" />

    <ImageButton
        android:id="@+id/changePassword"
        android:layout_width="21dp"
        android:layout_height="22dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="283dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:srcCompat="@drawable/ic_change_password" />

</androidx.constraintlayout.widget.ConstraintLayout>